[1.6] OpenIKED 7.3 - openiked/releases.html

--- a/openiked/releases.html
+++ b/openiked/releases.html
@@ -50,6 +50,9 @@ RWQpQ9uFY+N0CJU4G4tOjEvD1rj8vJaF1O3BLLrV8ZBc7dScEEYaGq/P</a>
 Список релизов, перечисленных в обратном хронологическом порядке:
 
 <ul>
+<li><p><strong>OpenIKED 7.3</strong> (20 ноября 2023 года)
+<br><a href="https://ftp.openbsd.org/pub/OpenBSD/OpenIKED/openiked-7.3-relnotes.txt">7.3 Release Notes</a>
+
 <li><p><strong>OpenIKED 7.2</strong> (1 декабря 2022 года)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/OpenIKED/openiked-7.2-relnotes.txt">7.2 Release Notes</a>
 
