--- a/openiked/index.html
+++ b/openiked/index.html
@@ -37,8 +37,8 @@
 </h2>
 
 <p id="callout">
-<a href="https://ftp.openbsd.org/pub/OpenBSD/OpenIKED/openiked-7.2-relnotes.txt">OpenIKED 7.2</a>
-вышла 1 декабря 2022 года
+<a href="https://ftp.openbsd.org/pub/OpenBSD/OpenIKED/openiked-7.3-relnotes.txt">OpenIKED 7.3</a>
+вышла 20 ноября 2023 года
 
 <p>
 OpenIKED это <strong>СВОБОДНАЯ</strong> реализация протокола обмена ключами (IKEv2),
