--- a/ru-community/articles.html
+++ b/ru-community/articles.html
@@ -59,6 +59,9 @@ OpenBSD. Это ни в коем случае не официальная док
       <li><a href="posts/send_dmesg_by_email.html">
 	  Как отправить dmesg через OpenBSD mail</a>
 
+      <li><a href="posts/virge.html">
+	  Восстановление удалённых драйверов видеокарт (на примере xf86-video-s3virge)</a>
+
       <li><a href="posts/sysupgrade_65_to_66.html">
           Краткое введение в sysupgrade(8)</a>
 
