add link to nvidia post - ru-community/articles.html

--- a/ru-community/articles.html
+++ b/ru-community/articles.html
@@ -62,6 +62,9 @@ OpenBSD. Это ни в коем случае не официальная док
       <li><a href="posts/virge.html">
 	  Восстановление удалённых драйверов видеокарт (на примере xf86-video-s3virge)</a>
 
+      <li><a href="posts/nvidia.html">
+	  Поддержка Nvidia-карт</a>
+
       <li><a href="posts/sysupgrade_65_to_66.html">
           Краткое введение в sysupgrade(8)</a>
 
