[1.368] OpenSSH 9.6 - openssh/index.html

--- a/openssh/index.html
+++ b/openssh/index.html
@@ -51,8 +51,8 @@
  
 <p id="callout">
 
-Релиз <a href="https://www.openbsd.org/openssh/releasenotes.html#9.5p1">OpenSSH 9.5</a>
-состоялся 4 октября 2023 года
+Релиз <a href="https://www.openbsd.org/openssh/releasenotes.html#9.6p1">OpenSSH 9.6</a>
+состоялся 18 декабря 2023 года
 
 <p>
 OpenSSH это основной инструмент для создания соединений
