[1.557] sync, firmware - faq/faq4.html

--- a/faq/faq4.html
+++ b/faq/faq4.html
@@ -479,6 +479,13 @@ fontconfig, используются программами для работы 
 носитель или после установки ОС с CD или жеского диска.
 
 <p>
+Добавление firmware на установочный носитель не активирует оборудование
+во время процесса установки.
+Они будут установленны (скопированны,добавлены) на диск, куда устанавливается
+система, поэтому оборудование можно будет использовать сразу после
+ее первой загрузки.
+
+<p>
 Начать стоит с поиска
 <a href="https://man.openbsd.org/?query=wireless&apropos=1">interface name</a>
 wireless адаптера в <a href="https://man.openbsd.org/dmesg">dmesg(8)</a>.
