--- a/rpki-client/index.html
+++ b/rpki-client/index.html
@@ -38,8 +38,8 @@
 </h2>
 
 <p id="callout">
-<a href="https://ftp.openbsd.org/pub/OpenBSD/rpki-client/rpki-client-8.6.txt">
-rpki-client 8.6</a> вышел 4 октября 2023 года.
+<a href="https://ftp.openbsd.org/pub/OpenBSD/rpki-client/rpki-client-8.7.txt">
+rpki-client 8.7</a> вышел 20 декабря 2023 года.
 
 <p>
 <a href="https://man.openbsd.org/rpki-client">rpki-client</a>
