--- a/rpki-client/portable.html
+++ b/rpki-client/portable.html
@@ -16,7 +16,7 @@
 <hr>
 
 <p>
-Портированная версия rpki-client 8.6 вышла 4 октября 2023 года.
+Портированная версия rpki-client 8.7 вышла 20 декабря 2023 года.
 
 <p>
 Портированная версия rpki-client работает и на нескольких других UNIX системах,
