[1.228] sync - faq/faq13.html

--- a/faq/faq13.html
+++ b/faq/faq13.html
@@ -63,7 +63,7 @@ FAQ - Мультимедиа
 <h2 id="enablerec">Включение аудиозаписи</h2>
 
 По соображениям конфиденциальности запись звука в OpenBSD по
-умолчанию отключена. Для включения используйте
+умолчанию отключена. Для её включения используйте
 <code>kern.audio.record</code> sysctl.
 
 <pre class="cmdbox">
