--- a/arm64.html
+++ b/arm64.html
@@ -159,6 +159,12 @@ OpenBSD/arm64 работает на следующем железе:
 	<ul>
 		<li><a href="https://www.solid-run.com/marvell-armada-family/macchiatobin/">SolidRun/Marvell MACCHIATObin</a>
 	</ul>
+	<li>NXP i.MX 8M Quad/Mini/Plus
+	<ul>
+		<li><a href="https://mntre.com/reform.html">MNT Reform</a>
+		<li><a href="https://www.solid-run.com/industrial-computers/cubox/">SolidRun CuBox-M</a>
+		<li><a href="https://www.solid-run.com/embedded-industrial-iot/nxp-i-mx8-family/hummingboard-m/">SolidRun HummingBoard</a>
+	</ul>
 	<li>Qualcomm Snapdragon 7cx (SC7180/SC7180P)
 	<ul>
 		<li>Acer Aspire One
