[1.99] sync, rpki-client 9.0 - rpki-client/portable.html

--- a/rpki-client/portable.html
+++ b/rpki-client/portable.html
@@ -16,7 +16,7 @@
 <hr>
 
 <p>
-Портированная версия rpki-client 8.9 вышла 13 февраля 2024 года.
+Портированная версия rpki-client 9.0 вышла 3 марта 2024 года.
 
 <p>
 Портированная версия rpki-client работает и на нескольких других UNIX системах,
@@ -33,8 +33,8 @@
 
 <p>
 rpki-client работат на всех операционных системах, где есть библиотека libcrypto,
-основанная на OpenSSL 1.1 или LibreSSL 3.5, библиотеке libtls, совместимой
-с LibreSSL 3.5 или более новой, и zlib.
+основанная на OpenSSL 1.1 или LibreSSL 3.6, библиотеке libtls, совместимой
+с LibreSSL 3.6 или более новой, и zlib.
 
 <p>
 На момент написания портированная версия rpki-client собиралась и работала на
