--- a/openssh/index.html
+++ b/openssh/index.html
@@ -51,8 +51,8 @@
  
 <p id="callout">
 
-Релиз <a href="https://www.openbsd.org/openssh/releasenotes.html#9.6p1">OpenSSH 9.6</a>
-состоялся 18 декабря 2023 года
+Релиз <a href="https://www.openbsd.org/openssh/releasenotes.html#9.7p1">OpenSSH 9.7</a>
+состоялся 11 марта 2024 года
 
 <p>
 OpenSSH это основной инструмент для создания соединений
