[1.301] sync, Symmetric Multithreading - faq/faq10.html

--- a/faq/faq10.html
+++ b/faq/faq10.html
@@ -26,6 +26,7 @@ FAQ - Управление системой
 <li><a href="#OpenNTPD"   >Использование OpenNTPD</a>
 <li><a href="#TimeZone"   >Часовые пояса</a>
 <li><a href="#locales"    >Набор символов (character sets) и локализация</a>
+<li><a href="#SMT"        >Symmetric Multithreading, или "почему не все мои процессоры используются?"</a>
 <li><a href="#SKey"       >Использование S/Key</a>
 <li><a href="#Dir"        >Служба каталогов (Directory Services)</a>
 <ul>
@@ -353,6 +354,40 @@ ASCII, а таже частично кодировку UTF-8 набора сим
 учитывать другие <code>LC_*</code> переменные, но использовать их или
 устанавливать для <code>LC_CTYPE</code> любое другое значение, отличное от
 <code>C</code>, <code>POSIX</code> или <code>en_US.UTF-8</code>, не рекомендуется.
+
+
+<h2 id="SMT">Symmetric Multithreading, или "почему не все мои процессоры используются?"</h2>
+
+Некоторые процессоры используют симметричную многопоточность
+(SMT; реализация Intel известна как «Hyper-Threading»).
+В этом случае один физический процессор представляет для ОС
+дополнительный логический процессор, который отображается как
+отдельный процессор в
+<a href="https://man.openbsd.org/dmesg">dmesg(8)</a>
+и таких программах, как
+<a href="https://man.openbsd.org/top">top(1)</a>.
+Они не имеют полных ресурсов процессора, но позволяют
+нескольким параллельнм процессам совместно использовать
+ресурсы одного и то же ядра CPU.
+
+<p>
+Эта функция может повысить производительность для некоторых
+рабочих нагрузок, но снизить ее для других.
+
+<p>
+Технология SMT была использована и задействована в нескольких
+уязвимостях процессоров, в частности, связанных со спекулятивным
+выполнением.
+Это приводило к тому, что процессы могут видеть и изучать
+информацию о из адресного пространства других процессов,
+к которым у них не должно быть доступа.
+Чтобы избежать этой проблемы, OpenBSD по умолчанию отключает выполнение
+кода на обнаруженных «виртуальных» ядрах SMT.
+
+<p>
+Это можно изменить, т.е. снова включить, установив для sysctl
+<code>hw.smd</code> значение <code>1</code>.
+Однако обычно делать это не рекомендуется.
 
 
 <h2 id="SKey">Использование S/Key</h2>
