--- a/faq/index.html
+++ b/faq/index.html
@@ -35,7 +35,7 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
     <td><a href="ports/index.html"                          >Книга по портам</a></td>
   </tr>
   <tr>
-    <td><a href="https://www.openbsd.org/faq/upgrade74.html">Обновление до 7.4</a></td>
+    <td><a href="https://www.openbsd.org/faq/upgrade75.html">Обновление до 7.5</a></td>
     <td><a href="../mail.html"                              >Почтовые рассылки</a></td>
     <td><a href="ports/testing.html"                        >Тестирование портов</a></td>
   </tr>
@@ -85,6 +85,7 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 <li><a href="faq10.html#OpenNTPD"  >Настройка времени, использование OpenNTPD</a>
 <li><a href="faq10.html#TimeZone"  >Часовые пояса</a>
 <li><a href="faq10.html#locales"   >Набор символов (character sets) и локализация</a>
+<li><a href="faq10.html#smt"       >SMT / HyperThreading</a>
 <li><a href="faq10.html#SKey"      >Использование S/Key</a>
 <li><a href="faq10.html#Dir"       >Служба каталогов (Directory Services)</a>
 </ul>
