[1.760] sync, OpenBSD 7.5 - index.html

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 <article>
 
 <h2>
-	<a href="https://www.openbsd.org/74.html">
-	<img src="images/puffy74.gif" alt="[OpenBSD 7.4]" height=198 width=599>
+	<a href="https://www.openbsd.org/75.html">
+	<img src="images/puffy75.gif" alt="[OpenBSD 7.5]" height=198 width=599>
 	</a>
 </h2>
 
@@ -95,8 +95,8 @@ OpenBSD доступна для скачивания с нашей
 
 <p>
 Последняя версия,
-<a href="https://www.openbsd.org/74.html">OpenBSD 7.4</a>,
-вышла 16 октября 2023 года. Это 55'й релиз.
+<a href="https://www.openbsd.org/75.html">OpenBSD 7.5</a>,
+вышла 5 апреля 2024 года. Это 56'й релиз.
 
 <p>
 OpenBSD разрабатывается добровольцами. Процесс разработки,
