--- a/opensmtpd/index.html
+++ b/opensmtpd/index.html
@@ -40,12 +40,11 @@
 </h2>
 
 <p id="callout">
-Релиз <a href="https://www.opensmtpd.org/announces/release-7.4.0p0.txt">OpenSMTPD 7.4</a>
-состоялся 25 октября 2023<br>
-Последний minor релиз
-<a href="https://www.opensmtpd.org/archives/opensmtpd-7.4.0p1.tar.gz">OpenSMTPD 7.4.0p1</a>
-[<a href="https://www.opensmtpd.org/archives/opensmtpd-7.4.0p1.sum.sig">sha256</a>]
-состоялся 16 ноября 2023
+Релиз
+<a href="https://www.opensmtpd.org/announces/release-7.5.0p0.txt">OpenSMTPD 7.5</a>
+состоялся 10 апреля 2024<br>
+<a href="https://www.opensmtpd.org/archives/opensmtpd-7.5.0p0.tar.gz">OpenSMTPD 7.5.0p0</a>
+[<a href="https://www.opensmtpd.org/archives/opensmtpd-7.5.0p0.sum.sig">sha256</a>]
 
 <p>
 OpenSMTPD представляет из себя <strong>СВОБОДНУЮ</strong>
