[1.302] sync - faq/faq10.html

--- a/faq/faq10.html
+++ b/faq/faq10.html
@@ -108,8 +108,7 @@ Securtiy исправления для для third party ПО, установл
 </ul>
 
 Чтобы получать уведомления об обновлениях портов, подпишитесь на рассылку
-<a href="https://lists.openbsd.org/cgi-bin/mj_wwwusr?func=lists-long-full&a
-+mp;extra=ports-changes">ports-changes</a>.
+<a href="https://lists.openbsd.org/cgi-bin/mj_wwwusr?func=lists-long-full&amp;extra=ports-changes">ports-changes</a>
 
 
 <h2 id="rc">Системные демоны (System Daemons)</h2>
