--- a/rpki-client/manual.html
+++ b/rpki-client/manual.html
@@ -25,8 +25,8 @@ Web руководства доступны в самой <a href="../index.html
 </ul>
 
 <p>
-Доп. информация по теме:<br />
-<br />
-Инфраструктура для поддержки безопасной интернет-маршрутизации (<a href="https://datatracker.ietf.org/doc/html/rfc6480">RFC 6480</a>).<br />
-<br />
+Доп. информация по теме:<br>
+<br>
+Инфраструктура для поддержки безопасной интернет-маршрутизации (<a href="https://datatracker.ietf.org/doc/html/rfc6480">RFC 6480</a>).<br>
+<br>
 BGP Prefix Origin Validation (<a href="https://datatracker.ietf.org/doc/html/rfc6811">RFC 6811</a>).
