[1.75] sync - openssh/security.html

--- a/openssh/security.html
+++ b/openssh/security.html
@@ -159,18 +159,18 @@ OpenSSH разрабатывается по тем же принципам и т
     sshd в OpenSSH версиях между 6.2 и 8.7 (включительно).
     <br>
 	sshd(8) failed to correctly initialise supplemental groups when
-	executing an <tt>AuthorizedKeysCommand</tt> or
-	<tt>AuthorizedPrincipalsCommand</tt>, where a
-	<tt>AuthorizedKeysCommandUser</tt> or
-	<tt>AuthorizedPrincipalsCommandUser</tt> directive was been set to
+	executing an <code>AuthorizedKeysCommand</code> or
+	<code>AuthorizedPrincipalsCommand</code>, where a
+	<code>AuthorizedKeysCommandUser</code> or
+	<code>AuthorizedPrincipalsCommandUser</code> directive was been set to
 	run the command as a non-root user. Instead these commands would inherit
 	the groups that sshd(8) was started with.
     <br>
 	Depending on system configuration, inherited groups may allow
 	the helper programs to gain unintended privilege.
     <br>
-	Neither <tt>AuthorizedKeysCommand</tt> nor
-	<tt>AuthorizedPrincipalsCommand</tt> are enabled by default in
+	Neither <code>AuthorizedKeysCommand</code> nor
+	<code>AuthorizedPrincipalsCommand</code> are enabled by default in
 	sshd_config(5).
     <br>
 	Этот баг был исправлен в OpenSSH 8.8.
