[1.142] LibreSSL 3.9.2 release - libressl/index.html

--- a/libressl/index.html
+++ b/libressl/index.html
@@ -40,8 +40,8 @@
 </h2>
 
 <p id="callout">
-<a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-3.9.1-relnotes.txt">LibreSSL 3.9.1</a>
-вышла 27 марта 2024 года
+<a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-3.9.2-relnotes.txt">LibreSSL 3.9.2</a>
+вышла 12 мая 2024 года
 
 <p>
 LibreSSL представляет из себя криптографический TLS-стек,
@@ -57,7 +57,7 @@ LibreSSL представляет из себя криптографически
 для других ОС (Linux, FreeBSD, Windows, и.т.д.).
 
 <p>
-Последним stable релизом является 3.9.1<br>
+Последним stable релизом является 3.9.2<br>
 Больше информации можно найти на странице
 <a href="releases.html">доступных версий</a>.
 
