--- a/openbgpd/ftp.html
+++ b/openbgpd/ftp.html
@@ -16,7 +16,7 @@
 <hr>
 
 <p>
-Релиз портированной версии OpenBGPD 8.3 состоялся 13 октября 2023 года.
+Релиз портированной версии OpenBGPD 8.4 состоялся 7 марта 2024 года.
 
 <p>
 Портированная OpenBGPD - это версия/порт для других операционных систем.
