--- a/rpki-client/index.html
+++ b/rpki-client/index.html
@@ -38,8 +38,8 @@
 </h2>
 
 <p id="callout">
-<a href="https://ftp.openbsd.org/pub/OpenBSD/rpki-client/rpki-client-9.0.txt">
-rpki-client 9.0</a> вышел 3 марта 2024 года.
+<a href="https://ftp.openbsd.org/pub/OpenBSD/rpki-client/rpki-client-9.1.txt">
+rpki-client 9.1</a> вышел 23 июня 2024 года.
 
 <p>
 <a href="https://man.openbsd.org/rpki-client">rpki-client</a>
