[1.107] sync, rpki-client 9.1 - rpki-client/portable.html

--- a/rpki-client/portable.html
+++ b/rpki-client/portable.html
@@ -16,7 +16,7 @@
 <hr>
 
 <p>
-Портированная версия rpki-client 9.0 вышла 3 марта 2024 года.
+Портированная версия rpki-client 9.1 вышла 23 июня 2024 года.
 
 <p>
 Портированная версия rpki-client работает и на нескольких других UNIX системах,
