[1.370] OpenSSH 9.8 release - openssh/index.html

--- a/openssh/index.html
+++ b/openssh/index.html
@@ -51,8 +51,8 @@
  
 <p id="callout">
 
-Релиз <a href="https://www.openbsd.org/openssh/releasenotes.html#9.7p1">OpenSSH 9.7</a>
-состоялся 11 марта 2024 года
+Релиз <a href="https://www.openbsd.org/openssh/releasenotes.html#9.8p1">OpenSSH 9.8</a>
+состоялся 1 июля 2024 года
 
 <p>
 OpenSSH это основной инструмент для создания соединений
