--- a/arm64.html
+++ b/arm64.html
@@ -134,7 +134,7 @@ OpenBSD/arm64 работает на следующем железе:
 		<li>Apple iMac (24-inch, M1, 2021)
 		<li>Apple MacBook Pro (14-inch, M1 Pro/Max, 2021)
 		<li>Apple MacBook Pro (16-inch, M1 Pro/Max, 2021)
-		<li>Apple Studio (M1 Max/Ultra, 2022)
+		<li>Apple Mac Studio (M1 Max/Ultra, 2022)
 		<li>Apple Mac mini (M2, 2023)
 		<li>Apple MacBook Air (13-inch, M2, 2022)
 		<li>Apple MacBook Pro (13-inch, M2, 2022)
@@ -142,7 +142,7 @@ OpenBSD/arm64 работает на следующем железе:
 		<li>Apple Mac mini (M2 Pro, 2023)
 		<li>Apple MacBook Pro (14-inch, M2 Pro/Max, 2023)
 		<li>Apple MacBook Pro (16-inch, M2 Pro/Max, 2023)
-		<li>Apple Studio (M2 Max/Ultra, 2023)
+		<li>Apple Mac Studio (M2 Max/Ultra, 2023)
 	</ul>
 	<li>Broadcom BCM2837/BCM2711
 	<ul>
