[1.501] OpenBGPD 8.5 release - openbgpd/ftp.html

--- a/openbgpd/ftp.html
+++ b/openbgpd/ftp.html
@@ -16,7 +16,7 @@
 <hr>
 
 <p>
-Релиз портированной версии OpenBGPD 8.4 состоялся 7 марта 2024 года.
+Релиз портированной версии OpenBGPD 8.5 состоялся 26 июня 2024 года.
 
 <p>
 Портированная OpenBGPD - это версия/порт для других операционных систем.
