[1.558] sync - faq/index.html

--- a/faq/index.html
+++ b/faq/index.html
@@ -85,7 +85,7 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 <li><a href="faq10.html#OpenNTPD"  >Настройка времени, использование OpenNTPD</a>
 <li><a href="faq10.html#TimeZone"  >Часовые пояса</a>
 <li><a href="faq10.html#locales"   >Набор символов (character sets) и локализация</a>
-<li><a href="faq10.html#smt"       >SMT / HyperThreading</a>
+<li><a href="faq10.html#SMT"       >SMT / HyperThreading</a>
 <li><a href="faq10.html#SKey"      >Использование S/Key</a>
 <li><a href="faq10.html#Dir"       >Служба каталогов (Directory Services)</a>
 </ul>
