Article on mounting veracrypt partiton in OpenBSD

--- a/ru-community/articles.html
+++ b/ru-community/articles.html
@@ -59,6 +59,9 @@ OpenBSD. Это ни в коем случае не официальная док
       <li><a href="posts/send_dmesg_by_email.html">
 	  Как отправить dmesg через OpenBSD mail</a>
 
+	<li><a href="posts/veracrypt.html">
+	  Как примонтировать раздел зашифрованный veracrypt в OpenBSD</a>
+
       <li><a href="posts/virge.html">
 	  Восстановление удалённых драйверов видеокарт (на примере xf86-video-s3virge)</a>
 
