[1.761] update link to innovations page - index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<li><a href="security.html">Безопасность</a>
 	    <a href="crypto.html">Криптография</a>
 	<li><a href="https://www.openbsd.org/events.html">Встречи и доклады</a>
-	<li><a href="https://www.openbsd.org/innovations.html">Инновации</a>
+	<li><a href="innovations.html">Инновации</a>
 </ul>
 
 <header>Скачать OpenBSD</header>
