[1.121] fix broken links - innovations.html

--- a/innovations.html
+++ b/innovations.html
@@ -105,7 +105,7 @@
 	First released with OpenBSD 3.4.
     <li><a href="https://man.openbsd.org/malloc.3">malloc(3)</a>
 	randomization implemented by Thierry Deval. Guard pages and randomized (delayed) free added by Ted Unangst.
-	Reimplemented by <a href="papers/eurobsdcon2009/otto-malloc.pdf">Otto Moerbeek</a>
+	Reimplemented by <a href="http://www.openbsd.org/papers/eurobsdcon2009/otto-malloc.pdf">Otto Moerbeek</a>
 	for OpenBSD 4.4.
     <li><strong>Position-independent executables (PIE)</strong>:
 	OpenBSD 5.3 was the first widely used operating system to enable it
@@ -352,8 +352,8 @@
 	Imported September 21, 1996 and first released with OpenBSD 2.0.
     <li><a href="anoncvs.html">AnonCVS</a>:
 	Designed and implemented by Chuck Cranor and Theo de Raadt in 1995
-	(<a href="papers/anoncvs-paper.pdf">paper</a>,
-	<a href="papers/anoncvs-slides.pdf">slides</a>)
+	(<a href="http://www.openbsd.org/papers/anoncvs-paper.pdf">paper</a>,
+	<a href="http://www.openbsd.org/papers/anoncvs-slides.pdf">slides</a>)
     <li><a href="https://man.openbsd.org/aucat.1">aucat(1)</a>:
 	Started by Kenneth Stailey.
 	Imported January 2, 1997 and first released with OpenBSD 2.1.
